alignment homepage fixs

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -1,11 +1,12 @@
 .home-page-root{
+  background-color: #EEEEE0;
 }
 
 .home-page-menu{
   margin-top: 0px;
   width: 100%;
   height: 37px;
-  background-color: #20c5ff;
+  background-color: #AFEEEE;
 }
 
 .home-page-body{
@@ -18,7 +19,7 @@
   background-color: transparent;
 }
 
-.user-col{
+.user-profile-wrapper{
 
 }
 
@@ -61,6 +62,9 @@ news-feed-col{
 
 .row-root{
   width: 100%;
+  -webkit-flex: 1; /* Safari 6.1+ */
+  -ms-flex: 1; /* IE 10 */
+  flex: 1;
 }
 
 .card-wrapper {
@@ -102,4 +106,9 @@ card-communities-wrapper{
 .group-description{
   width: 180px;
   height: 100px;
+}
+
+.card-header{
+  text-align: -webkit-center;
+  font-weight: bold;
 }
